--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-
-<!DOCTYPE html>
 <html>
 <head>
     <!-- Title -->
@@ -24,7 +21,7 @@
 </head>
 <body>
     <section id="aluno" class="a-login">
-        <div class="a-login-background a-login-background-4"></div>
+        <div class="a-login-background a-login-background-1"></div>
 
         <div class="a-login-wrapper">
             <form action="/Aluno/LogOn" method="post" class="a-login-form">
@@ -64,7 +61,7 @@
         </div>
 
             <div class="a-login-caption">
-                    <span>Coworking Spaces | <strong class="a-login-caption-highlight">Unidade Avenida Paulista</strong></span>
+                    <span>Cyber Cup | <strong class="a-login-caption-highlight">NEXT FIAP Festival</strong> 2015</span>
             </div>
 
         <div class="a-login-copyright">
